--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
-.app{
-    background-color: #f3f2ef;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.app {
+  background-color: #f3f2ef;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
 }
 
-.app__body{
-    display: flex;
+.app__body {
+  display: flex;
+  justify-content: center;
 }
