added margin on top

--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -26,6 +26,10 @@
     overflow-wrap: anywhere;
 }
 
+.post__body > p {
+    margin-top: 10px;
+}
+
 .post__buttons {
     display: flex;
     justify-content: space-evenly;
